<resources>
    <string name="app_name">Lab_A1_A2_Android_Cem_C0820726</string>
    <string name="add_new_product_label">Add New Product</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="provider_name_placeholder">Provider Name</string>
    <string name="price_placeholder">Price</string>
    <string name="description_placeholder">Description</string>
    <string name="save_button">Save</string>
    <string name="edit_product">Update Product</string>
    <string name="add_new_provider">Add New Provider</string>
    <string name="provider_email_placeholder">Provider Email</string>
    <string name="provider_phone_placeholder">Provider Phone</string>
    <string name="provider_latitude_placeholder">Latitude</string>
    <string name="provider_longitude_placeholder">Longitude</string>
    <string name="edit_provider">Update Provider</string>
</resources>